--- a/app/styles/_right_messages.scss
+++ b/app/styles/_right_messages.scss
@@ -148,55 +148,66 @@
 }
 
 @media screen and (max-width: 415px) {
-    .chat_main {
-        padding: 0 48px 48px 48px;
-        .answer {
-            padding: 0 8px 0 0 !important;
+    .right_messages {
+        max-height: 900px;
 
-
-            img {
-                display: none !important;
-            }
-
-            ul {
-                margin: 0 !important;
-                max-height: 100% !important;
-            }
-
+        .chat_header {
+            height: auto;
+            margin-right: 0;
+            padding: 0;
         }
 
-        .chat_message {
-            padding: 0 !important;
+        .chat_main {
+            padding-top: 0;
+            padding-left: 22px;
+            padding-right: 22px;
+            max-height: 610px;
+            .answer {
+                padding: 0 8px 0 0 !important;
 
-            img {
-                display: none !important;
+                img {
+                    display: none !important;
+                }
+
+                ul {
+                    margin: 0 !important;
+                    max-height: 100% !important;
+                }
             }
 
-            ul {
-                margin: 0 !important;
-                max-height: 100% !important;
-                padding-right: 8px !important;
-                width: 100% !important;
-            }
+            .chat_message {
+                padding: 0 !important;
 
+                img {
+                    display: none !important;
+                }
+
+                ul {
+                    margin: 0 !important;
+                    max-height: 100% !important;
+                    padding-right: 8px !important;
+                    width: 100% !important;
+                }
+
+            }
         }
-    }
-    .write_message {
-        margin: 0 !important;
-        padding: 15px 16px 15px 32px !important;
+        .write_message {
+            margin: 0 !important;
+            padding: 15px 16px 15px 32px !important;
 
-        .input-group {
+            .input-group {
 
-            input {
-                height: 28px !important;
-                margin-top: 7px !important;
-            }
+                input {
+                    height: 28px !important;
+                    margin-top: 7px !important;
+                }
 
-            button {
-                width: 42px !important;
-                height: 42px !important;
-                padding: 7px 9px 8px 9px !important;
+                button {
+                    width: 42px !important;
+                    height: 42px !important;
+                    padding: 7px 9px 8px 9px !important;
 
+                }
             }
         }
     }
